2001-06-13  Martin Baulig  <baulig@suse.de>

	* selector_demo.c: Moved to libgnome-extra/demos.
	* libgnome-demos-server.c, libgnomeui-demos.oafinfo: Likewise.

2001-06-11  Cody Russell  <bratsche@gnome.org>

	* Makefile.am: Add GCONF_CFLAGS.

2001-05-19  Martin Baulig  <baulig@suse.de>

	* Makefile.am: Comment out animator_demo.

	* selector_demo.c: Added FTP test.

2001-05-02  Martin Baulig  <baulig@suse.de>

	* libgnomeui-demos-server.c, libgnomeui-demos.oafinfo: New files.
	This is a little component test program. To test it, you need to
	manually the oafinfo file to $(datadir)/oaf.

	* selector_demo.c: Comment out everything which currently doesn't
	work and add a GnomeEntry with a remote GNOME::Selector (from the
	libgnomeui-demos-server).

2001-04-29  Martin Baulig  <baulig@suse.de>

	* selector_demo.c: Use the Bonobo UI API.

	* winhints_demo.c: Use BonoboWindow, not GnomeApp.

	* dock_demo.c: Removed; this is now in libbonoboui.

2001-04-29  Martin Baulig  <baulig@suse.de>

	* Makefile.am: Temporarily diabled mdi_demo until GnomeMDI
	is back in libgnomeui.

2001-04-29  Martin Baulig  <baulig@suse.de>

	* winhints_demo.c: Use the GTK+ API to access our stock icons.

2001-04-26  Martin Baulig  <baulig@suse.de>

	* stock_demo.c: Removed; this has been moved to libcompat/demos/.

	* Makefile.am: Don't compile the stock_demo as the GnomeStock is
	deprecated and will be moved to libcompat.

2001-02-26  Martin Baulig  <baulig@suse.de>

	* selector_demo.c: Added example for the new pixmap selector mode
	of the GnomeIconEntry.

2001-02-26  Martin Baulig  <baulig@suse.de>

	* stock_demo.c: There is no gnome_stock_new_with_icon_at_size()
	any more.

	* stock_demo.c: Tagged as `before-martin-reverted-it'.

2000-12-08  Martin Baulig  <baulig@suse.de>

	* animator_demo.c, dock_demo.c, mdi_demo.c, stock_demo.c,
	selector_demo.c, winhints_demo.c: Moved here from libgnomeui.

	* test-file-saver.c, test-recently-used.c: Moved here from
	libgnomeui.
